--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+.vscode/
+backups/
+data/
+model/
+trained
+.env
+airflow.db
+airflow-webserver.pid
+standalone_admin_password.txt
+
+.env
